<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context="com.batelectwo.UserBranches">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

    <!-- Head -->

    <TextView
        android:id="@+id/cooperative_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cooperative_name"
        android:fontFamily="@font/poppinsbold"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#a08b15"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/textViewBranches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Branches"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/olive_green">

            </TextView>

        <!-- Text View of Area I -->

        <TextView
            android:id="@+id/textViewAreaI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/areai"
            android:textSize="14dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/textViewBranches"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/sage_green"
            android:justificationMode="inter_word"
            android:layout_marginStart="10dp">

        </TextView>

            <!-- Text View of Area I Location -->

            <TextView
                android:id="@+id/textViewAreaILocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banaybanay"
                android:layout_marginTop="5dp"
                android:layout_below="@id/textViewAreaI"
                android:fontFamily="@font/poppinsmedium"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Tel Numbers of Area I -->

            <TextView
                android:id="@+id/textViewTelNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areai_telnumber"
                android:layout_below="@id/textViewAreaILocation"
                android:fontFamily="@font/poppinsmedium"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Telefax of Area I -->

            <TextView
                android:id="@+id/textViewTelefaxAreaI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areai_telefax"
                android:layout_below="@id/textViewTelNumbers"
                android:fontFamily="@font/poppinsmedium"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Line that divides Area I and Area II -->

            <View
                android:id="@+id/dividerAreaI"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/textViewTelefaxAreaI"
                android:background="@android:color/darker_gray" />

            <!-- Text View of Area II -->

            <TextView
                android:id="@+id/textViewAreaII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area_ii_rosario_branch"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/dividerAreaI"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/sage_green"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Text View of Area II Location -->

            <TextView
                android:id="@+id/textViewAreaIILocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areaii_location"
                android:layout_marginTop="5dp"
                android:layout_below="@id/textViewAreaII"
                android:fontFamily="@font/poppinsmedium"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Telefax of Area II -->

            <TextView
                android:id="@+id/textViewTelefaxAreaII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areaii_telefax"
                android:layout_below="@id/textViewAreaIILocation"
                android:fontFamily="@font/poppinsmedium"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Line that divides Area II and Area III -->

            <View
                android:id="@+id/dividerAreaII"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/textViewTelefaxAreaII"
                android:background="@android:color/darker_gray" />

            <!-- Text View of Area III -->

            <TextView
                android:id="@+id/textViewAreaIII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areaiii_tanauan_branch"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/dividerAreaII"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/sage_green"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Text View of Area III Location -->

            <TextView
                android:id="@+id/textViewAreaIIILocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areaiii_location"
                android:layout_marginTop="5dp"
                android:layout_below="@id/textViewAreaIII"
                android:fontFamily="@font/poppinsmedium"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Telephone Numbers of Area II -->

            <TextView
                android:id="@+id/textViewAreaIIINumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areaiii_telnumbers"
                android:layout_below="@id/textViewAreaIIILocation"
                android:fontFamily="@font/poppinsmedium"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Telefax of Area II -->

            <TextView
                android:id="@+id/textViewTelefaxAreaIII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areaiii_telefax"
                android:layout_below="@id/textViewAreaIIINumber"
                android:fontFamily="@font/poppinsmedium"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp">

            </TextView>

            <!-- Line that Area III  and Relative Layout -->

            <View
                android:id="@+id/dividerAreaIII"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/textViewTelefaxAreaIII"
                android:background="@android:color/darker_gray" />



        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>